# tfg_agentes_ia_langraph

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  PLAN.md  README.md  STRUCTURE.md  docker-compose.yml  human_in_the_loop_agents_restrain.md  langgraph.json  langraph_supervisor_pattern.md  multiagent_project_folders_structure.md  multiagent_resume.md  plan_model_agent.md  pyproject.toml
.claude/agents/: log-reader.md  test-runner.md
api/: main.py
api/models/: experiment.py  monitoring.py  run.py
api/routers/: experiments.py  monitoring.py  runs.py  uploads.py
api/services/: mlflow_client.py  pipeline.py  pipeline_helpers.py  run_store.py
api/tests/: conftest.py  test_experiments.py  test_integration.py  test_models.py  test_monitoring.py  test_pipeline.py  test_run_store.py  test_runs.py  test_uploads.py
artifacts/: temporal_gaps_series.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dashboard/: app.py  pipeline_helpers.py
dashboard/components/: chat_interface.py  metrics_display.py
dashboard/pages/: 01_pipeline.py  02_experiments.py  03_monitoring.py  04_chat.py  05_logs.py
data/benchmarks/: adult_income.csv  air_passengers.csv  appliances_energy.csv  bank_marketing.csv  beijing_pm25.csv  bike_sharing.csv  brent_oil.csv  co2_mauna_loa.csv  coal_feedstock_daily.csv  commodity_panel_weekly.csv  concrete_strength.csv  crypto_weekly.csv  dominicks_cookies.csv  electricity_demand_sample.csv  energy_efficiency.csv  fx_exog_weekly.csv  gold_macro_monthly.csv  gold_multi_exog_weekly.csv  heart_disease.csv  henry_hub_gas.csv  m4_monthly_sample.csv  metro_traffic_volume.csv  nile.csv  oil_weekly.csv  ppi_chemicals.csv  sales_sample.csv  sp500_macro_weekly.csv  stock_sample.csv  sunspots.csv  titanic.csv  vic_elec.csv  weather_sample.csv
data/diagnostics/: energy_forecast_gap_report.json
data/parsed/: 3c52735e_energy_readings_parsed.csv
data/samples/: iris.csv  iris_labels.csv  iris_measurements.csv
data/schema/: uploaded_schema.json
data/schemas/: dataset_schema.json  iris_classification.json
data/tmp/: merged_iris_classification.csv
docs/thesis/: THESIS_INDEX.md  anexo_datasets.tex  anexo_interfaz.tex  anexo_reproduccion.tex  cap03_alternativas.tex  cap04_arquitectura.tex  cap04_experience_pool.tex  (+5 more)
frontend/: Dockerfile.frontend  package-lock.json  package.json  tailwind.config.ts
scripts/: _clear_mlflow_runs.py  _dataset_sources.py  _generate_benchmarks.py  _make_case_study_datasets.py  _make_case_study_schemas.py  _make_forecasting_manifest.py  _make_remaining_manifest.py  _make_retail_star_schema.py  _make_supervised3_manifest.py  _make_vic_elec_manifest.py  _manifest_dominicks.yaml  _manifest_forecasting.yaml  _manifest_remaining.yaml  _manifest_supervised3.yaml  _manifest_vic_elec.yaml  agentic_cost_aggregate.py  benchmark_manifest.yaml  gen_forecasting2.py  gen_partial_join_datasets.py  gen_partial_join_timeseries.py  gen_partial_join_ts_single.py  measure_agentic_cost.py  pool_snapshot.py  run_benchmark.py  run_pipeline.py  seed_mlflow.py
storage/: mlops_metadata.db
tests/: conftest.py
(+396 files in other folders)
