[project]
name = "mlops-multi-agent"
version = "0.1.0"
description = "Multi-agent MLOps system using LangGraph — Bachelor's thesis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mario", email = "mario@example.com" }]

dependencies = [
    # LangGraph / LangChain ecosystem
    "langgraph>=0.4",
    "langgraph-supervisor>=0.0.30",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=0.3.17",

    # Dashboard & MLOps
    "mlflow>=3.10",

    # ML & Data
    "catboost>=1.2",
    "lightgbm>=4.0",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=2.0",
    "optuna>=4.0",
    "skforecast>=0.13",
    "statsforecast>=1.7",
    "xgboost>=2.0",
    "yfinance>=0.2",
    "statsmodels>=0.14",

    # Configuration & Validation
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",

    # HTTP & Logging
    "httpx>=0.28",
    "loguru>=0.7",

    # Observability
    "pyyaml>=6.0",

    # API backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]

[project.scripts]
mlops-pipeline = "mlops_agents.utils.runners:run_pipeline"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_agents"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async (important for LangGraph)
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # function-call-in-default-argument (Pydantic pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["mlops_agents"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring real LLM calls",
    "llm: marks tests making real LLM calls",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langgraph.*",
    "loguru.*",
    "optuna.*",
    "sklearn.*",
]
ignore_missing_imports = true
